RESOLVED FIXED202382
[JSC] AI folds CompareEq wrongly when it sees proven Boolean and Number
https://bugs.webkit.org/show_bug.cgi?id=202382
Summary [JSC] AI folds CompareEq wrongly when it sees proven Boolean and Number
Yusuke Suzuki
Reported 2019-09-30 16:44:49 PDT
[JSC] AI folds CompareEq wrongly when it sees proven Boolean and Number
Attachments
Patch (3.57 KB, patch)
2019-09-30 16:47 PDT, Yusuke Suzuki
saam: review+
Yusuke Suzuki
Comment 1 2019-09-30 16:47:37 PDT
Yusuke Suzuki
Comment 2 2019-09-30 16:47:39 PDT
Yusuke Suzuki
Comment 3 2019-09-30 17:00:17 PDT
Note You need to log in before you can comment on or make changes to this bug.